--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 google-generativeai
 langchain==0.0.284
-python-dotenv==1.0.0
-streamlit==1.22.0
+python-dotenv==1.0.1
+streamlit==1.30.0
 tiktoken==0.4.0
-faiss-cpu==1.7.4
-protobuf~=3.19.0
-sentence-transformers==2.2.2
+faiss-cpu==1.8.0
+protobuf==4.22.1
+sentence-transformers==3.2.0
+
