--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ streamlit==1.26.0
 faiss-cpu==1.7.4
 sentence-transformers
 torch
+InstructorEmbedding
 tiktoken==0.4.0
 python-dotenv==1.0.0
 protobuf==3.20.3
