--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ streamlit==1.26.0
 faiss-cpu==1.7.4
 sentence-transformers==2.2.2
 torch
+google-palm
 InstructorEmbedding
 tiktoken==0.4.0
 python-dotenv==1.0.0
